objects/Apttus_Data_Migration_Sequence__mdt.object
<CustomObject>
    <fields>
        <fullName>APTS_Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Validate</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Load</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Spain</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Data_Set__c</fullName>
        <label>Data Set</label>
        <picklist>
            <picklistValues>
                <fullName>Global Products</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Local Products</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Sequence_Group__c</fullName>
        <label>Sequence Group</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Apttus Data Migration Sequence</label>
    <pluralLabel>Apttus Data Migration Sequence</pluralLabel>
</CustomObject>